[tool.poetry]
name = "bus-alerts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"
feedparser = "^6.0.10"
requests-html = "^0.10.0"
html2text = "^2020.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
