[project]
name = "bus-alerts"
version = "0.1.0"
requires-python = ">=3.10, <4.0"
description = "Scrape bus travel alerts from various sources and send to devices"
authors = [
    { name = "Joe Joiner", email = "2454320+joejoinerr@users.noreply.github.com"}
]
readme = "README.md"
dependencies = [
    "feedparser>=6.0.11",
    "html2text>=2024.2.26",
    "httpx>=0.27.2",
    "lxml-html-clean>=0.3.1",
    "requests-html>=0.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]
