[project]
name = "bus-alerts"
version = "0.1.0"
description = ""
authors = [{ name = "Joe Joiner", email = "2454320+joejoinerr@users.noreply.github.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "httpx>=0.24.0,<0.25",
    "feedparser>=6.0.10,<7",
    "requests-html>=0.10.0,<0.11",
    "html2text>=2020.1.16,<2021",
]

